--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="meowrhino studio — estudio de diseño web en Barcelona. Webs con código abierto, sin cuotas de mantenimiento.">
+  <meta name="theme-color" content="#ffffff">
   <title>meowrhino studio</title>
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -11,7 +13,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="content"></div>
+  <main id="content" role="main"></main>
   <script src="script.js"></script>
 </body>
 </html>
